--- a/exploratory-data-analysis/eda.ipynb
+++ b/exploratory-data-analysis/eda.ipynb
@@ -343,6 +343,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "id": "e5f698cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prix médiant des transactions : 3751.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "PrixMedian = df[\"total_amount\"].median()\n",
+    "print(f\"Prix médiant des transactions : {PrixMedian}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "a2e9de01",
    "metadata": {},
@@ -425,13 +444,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lylia\\AppData\\Local\\Temp\\ipykernel_4852\\2398492840.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\lylia\\AppData\\Local\\Temp\\ipykernel_21212\\2398492840.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  CustomerB2B[\"product_name\"] = CustomerB2B[\"product_name\"].str.replace(r' Product_\\d+$',\"\",regex=True)\n",
-      "C:\\Users\\lylia\\AppData\\Local\\Temp\\ipykernel_4852\\2398492840.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\lylia\\AppData\\Local\\Temp\\ipykernel_21212\\2398492840.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -504,7 +523,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Regardons les produits acheté par type de produit\n",
+      "Regardons les produits acheté par type de produit en fonction du type de client\n",
       "------------------B2B------------------\n",
       "                    count\n",
       "product_name             \n",
@@ -538,7 +557,7 @@
    "source": [
     "TenMostBuyProductsByB2B = pd.DataFrame(CustomerB2B[\"product_name\"].value_counts().head(10))\n",
     "TenMostBuyProductsByB2C = pd.DataFrame(CustomerB2C[\"product_name\"].value_counts().head(10))\n",
-    "print(\"Regardons les produits acheté par type de produit\")\n",
+    "print(\"Regardons les produits acheté par type de produit en fonction du type de client\")\n",
     "print(\"------------------B2B------------------\")\n",
     "print(TenMostBuyProductsByB2B)\n",
     "print(\"------------------B2C------------------\")\n",
@@ -768,6 +787,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "78edd693",
+   "metadata": {},
+   "source": [
+    "On peut se rendre compte que les produits restent les mêmes, seul la quantité change.\n",
+    " \n",
+    "Le tri par type de client n'est pas concluant, On peut seulement dire que le fait d'acheter en grosse quantité ne change pas le prix à l'unité. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "df467b35",
@@ -790,7 +819,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lylia\\AppData\\Local\\Temp\\ipykernel_4852\\1260783253.py:16: FutureWarning: \n",
+      "C:\\Users\\lylia\\AppData\\Local\\Temp\\ipykernel_21212\\1260783253.py:16: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -843,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "700ba080",
    "metadata": {},
    "outputs": [
@@ -884,29 +913,233 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>TX_89a20095-f7be-4bc1-bb58-a305e3fc8313</td>\n",
+       "      <td>2023-10-30 03:01:46.571042</td>\n",
+       "      <td>6933</td>\n",
+       "      <td>David Hays</td>\n",
+       "      <td>New Sabrina</td>\n",
+       "      <td>B2C</td>\n",
+       "      <td>Furniture Product_10</td>\n",
+       "      <td>Home &amp; Kitchen &gt; Furniture</td>\n",
+       "      <td>246.08</td>\n",
+       "      <td>4</td>\n",
+       "      <td>984.32</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>TX_a6b15a50-47b9-428c-b297-ce365acb061a</td>\n",
+       "      <td>2023-10-30 03:06:07.918040</td>\n",
+       "      <td>9328</td>\n",
+       "      <td>Adam Oconnell</td>\n",
+       "      <td>East Katherineton</td>\n",
+       "      <td>B2C</td>\n",
+       "      <td>Non-Fiction Product_15</td>\n",
+       "      <td>Books &gt; Non-Fiction</td>\n",
+       "      <td>792.30</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3169.20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>TX_abdde2cb-3752-4399-84f4-c91c098b195f</td>\n",
+       "      <td>2023-10-30 03:06:28.475922</td>\n",
+       "      <td>6766</td>\n",
+       "      <td>Jerry Brown</td>\n",
+       "      <td>Lukefort</td>\n",
+       "      <td>B2B</td>\n",
+       "      <td>Bedding Product_1</td>\n",
+       "      <td>Home &amp; Kitchen &gt; Bedding</td>\n",
+       "      <td>685.73</td>\n",
+       "      <td>40</td>\n",
+       "      <td>27429.20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>TX_ba162310-0807-4dee-818f-fa014f9880ef</td>\n",
+       "      <td>2023-10-30 03:06:59.374222</td>\n",
+       "      <td>9111</td>\n",
+       "      <td>Craig Martinez</td>\n",
+       "      <td>South Leonard</td>\n",
+       "      <td>B2B</td>\n",
+       "      <td>Shoes Product_11</td>\n",
+       "      <td>Fashion &gt; Shoes</td>\n",
+       "      <td>404.96</td>\n",
+       "      <td>96</td>\n",
+       "      <td>38876.16</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>TX_60ec44fd-2172-4ffa-8c67-4b399c59ed7c</td>\n",
+       "      <td>2023-10-30 03:08:29.580560</td>\n",
+       "      <td>1763</td>\n",
+       "      <td>David Wood</td>\n",
+       "      <td>Jacksonstad</td>\n",
+       "      <td>B2B</td>\n",
+       "      <td>Supplements Product_5</td>\n",
+       "      <td>Health &amp; Personal Care &gt; Supplements</td>\n",
+       "      <td>927.67</td>\n",
+       "      <td>35</td>\n",
+       "      <td>32468.45</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>TX_724fac75-2da8-4694-ad08-51d2f0ef1e3c</td>\n",
+       "      <td>2023-10-30 03:10:15.041152</td>\n",
+       "      <td>3620</td>\n",
+       "      <td>Andrew Avila</td>\n",
+       "      <td>Pittmanfort</td>\n",
+       "      <td>B2B</td>\n",
+       "      <td>Computers Product_11</td>\n",
+       "      <td>Electronics &gt; Computers</td>\n",
+       "      <td>225.06</td>\n",
+       "      <td>25</td>\n",
+       "      <td>5626.50</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>TX_b82ed20e-13e9-43c9-9722-67f861b916cf</td>\n",
+       "      <td>2023-10-30 03:11:36.464170</td>\n",
+       "      <td>8473</td>\n",
+       "      <td>Nichole Bartlett</td>\n",
+       "      <td>Petersonmouth</td>\n",
+       "      <td>B2B</td>\n",
+       "      <td>Women's Clothing Product_7</td>\n",
+       "      <td>Fashion &gt; Women's Clothing</td>\n",
+       "      <td>693.73</td>\n",
+       "      <td>94</td>\n",
+       "      <td>65210.62</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>TX_2490baff-da73-4257-87b0-fdc68b039bb4</td>\n",
+       "      <td>2023-10-30 03:11:58.760631</td>\n",
+       "      <td>9069</td>\n",
+       "      <td>Bryan Reyes</td>\n",
+       "      <td>East Malikbury</td>\n",
+       "      <td>B2B</td>\n",
+       "      <td>Supplements Product_8</td>\n",
+       "      <td>Health &amp; Personal Care &gt; Supplements</td>\n",
+       "      <td>939.16</td>\n",
+       "      <td>85</td>\n",
+       "      <td>79828.60</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>TX_de6a75ae-fef2-4163-8e83-07cf8c727e7a</td>\n",
+       "      <td>2023-10-30 03:13:16.476470</td>\n",
+       "      <td>54</td>\n",
+       "      <td>Kimberly Miller</td>\n",
+       "      <td>North Amandafurt</td>\n",
+       "      <td>B2C</td>\n",
+       "      <td>Women's Clothing Product_4</td>\n",
+       "      <td>Fashion &gt; Women's Clothing</td>\n",
+       "      <td>135.42</td>\n",
+       "      <td>1</td>\n",
+       "      <td>135.42</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>TX_e5861fca-1084-4ef0-9e04-139d5c12a955</td>\n",
+       "      <td>2023-10-30 03:13:25.110187</td>\n",
+       "      <td>9287</td>\n",
+       "      <td>Anthony Miller</td>\n",
+       "      <td>West Danielport</td>\n",
+       "      <td>B2C</td>\n",
+       "      <td>Outdoor Apparel Product_7</td>\n",
+       "      <td>Sports &amp; Outdoors &gt; Outdoor Apparel</td>\n",
+       "      <td>655.92</td>\n",
+       "      <td>1</td>\n",
+       "      <td>655.92</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Monday</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [transaction_id, timestamp, customer_id, customer_name, city, customer_type, product_name, category, price, quantity, total_amount, month, weekday]\n",
-       "Index: []"
+       "                            transaction_id                  timestamp  \\\n",
+       "0  TX_89a20095-f7be-4bc1-bb58-a305e3fc8313 2023-10-30 03:01:46.571042   \n",
+       "1  TX_a6b15a50-47b9-428c-b297-ce365acb061a 2023-10-30 03:06:07.918040   \n",
+       "2  TX_abdde2cb-3752-4399-84f4-c91c098b195f 2023-10-30 03:06:28.475922   \n",
+       "3  TX_ba162310-0807-4dee-818f-fa014f9880ef 2023-10-30 03:06:59.374222   \n",
+       "4  TX_60ec44fd-2172-4ffa-8c67-4b399c59ed7c 2023-10-30 03:08:29.580560   \n",
+       "5  TX_724fac75-2da8-4694-ad08-51d2f0ef1e3c 2023-10-30 03:10:15.041152   \n",
+       "6  TX_b82ed20e-13e9-43c9-9722-67f861b916cf 2023-10-30 03:11:36.464170   \n",
+       "7  TX_2490baff-da73-4257-87b0-fdc68b039bb4 2023-10-30 03:11:58.760631   \n",
+       "8  TX_de6a75ae-fef2-4163-8e83-07cf8c727e7a 2023-10-30 03:13:16.476470   \n",
+       "9  TX_e5861fca-1084-4ef0-9e04-139d5c12a955 2023-10-30 03:13:25.110187   \n",
+       "\n",
+       "   customer_id     customer_name               city customer_type  \\\n",
+       "0         6933        David Hays        New Sabrina           B2C   \n",
+       "1         9328     Adam Oconnell  East Katherineton           B2C   \n",
+       "2         6766       Jerry Brown           Lukefort           B2B   \n",
+       "3         9111    Craig Martinez      South Leonard           B2B   \n",
+       "4         1763        David Wood        Jacksonstad           B2B   \n",
+       "5         3620      Andrew Avila        Pittmanfort           B2B   \n",
+       "6         8473  Nichole Bartlett      Petersonmouth           B2B   \n",
+       "7         9069       Bryan Reyes     East Malikbury           B2B   \n",
+       "8           54   Kimberly Miller   North Amandafurt           B2C   \n",
+       "9         9287    Anthony Miller    West Danielport           B2C   \n",
+       "\n",
+       "                 product_name                              category   price  \\\n",
+       "0        Furniture Product_10            Home & Kitchen > Furniture  246.08   \n",
+       "1      Non-Fiction Product_15                   Books > Non-Fiction  792.30   \n",
+       "2           Bedding Product_1              Home & Kitchen > Bedding  685.73   \n",
+       "3            Shoes Product_11                       Fashion > Shoes  404.96   \n",
+       "4       Supplements Product_5  Health & Personal Care > Supplements  927.67   \n",
+       "5        Computers Product_11               Electronics > Computers  225.06   \n",
+       "6  Women's Clothing Product_7            Fashion > Women's Clothing  693.73   \n",
+       "7       Supplements Product_8  Health & Personal Care > Supplements  939.16   \n",
+       "8  Women's Clothing Product_4            Fashion > Women's Clothing  135.42   \n",
+       "9   Outdoor Apparel Product_7   Sports & Outdoors > Outdoor Apparel  655.92   \n",
+       "\n",
+       "   quantity  total_amount  month weekday  \n",
+       "0         4        984.32     10  Monday  \n",
+       "1         4       3169.20     10  Monday  \n",
+       "2        40      27429.20     10  Monday  \n",
+       "3        96      38876.16     10  Monday  \n",
+       "4        35      32468.45     10  Monday  \n",
+       "5        25       5626.50     10  Monday  \n",
+       "6        94      65210.62     10  Monday  \n",
+       "7        85      79828.60     10  Monday  \n",
+       "8         1        135.42     10  Monday  \n",
+       "9         1        655.92     10  Monday  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "SDdf = df.sort_values(\"timestamp\")\n",
-    "SDdf.head(0)"
+    "SDdf.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "id": "eb9f866c",
    "metadata": {},
    "outputs": [
@@ -1073,7 +1306,7 @@
        "4        35      32468.45     10  Monday   Supplements  Health & Personal Care  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "id": "dd8419d3",
    "metadata": {},
    "outputs": [
@@ -1119,7 +1352,9 @@
    "id": "8270ecba",
    "metadata": {},
    "source": [
-    "On peut voir que les ventes sont globalement plus présentes lors de fêtes de fin d'année et lors des vacances scolaire, notemment celle de juillet/aout."
+    "On peut voir que les ventes sont globalement plus présentes lors de fêtes de fin d'année et lors des vacances scolaire, notemment celle de juillet/aout.\n",
+    "\n",
+    "Les ventes par période de l'année reste identiques"
    ]
   }
  ],
