fin analyses figures

--- a/exploratory-data-analysis/eda.ipynb
+++ b/exploratory-data-analysis/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "88827f6b386b0dca",
    "metadata": {
     "ExecuteTime": {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "266cecfeff5d105b",
    "metadata": {
     "ExecuteTime": {
@@ -294,7 +294,7 @@
        "[1000000 rows x 11 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c8c59b89b1ad6e52",
    "metadata": {
     "ExecuteTime": {
@@ -332,7 +332,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "e5f698cd",
    "metadata": {},
    "outputs": [
@@ -444,13 +444,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lylia\\AppData\\Local\\Temp\\ipykernel_21212\\2398492840.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\lylia\\AppData\\Local\\Temp\\ipykernel_23376\\2398492840.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  CustomerB2B[\"product_name\"] = CustomerB2B[\"product_name\"].str.replace(r' Product_\\d+$',\"\",regex=True)\n",
-      "C:\\Users\\lylia\\AppData\\Local\\Temp\\ipykernel_21212\\2398492840.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\lylia\\AppData\\Local\\Temp\\ipykernel_23376\\2398492840.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -511,6 +511,14 @@
     "axes[1].set_ylabel('Fréquence')\n",
     "axes[1].set_title('Histogramme Product B2C')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ca5fbc1",
+   "metadata": {},
+   "source": [
+    "Répartition du nombre de vente par produit et par type de client. Cela peut etre utile pour de l'analyse"
    ]
   },
   {
@@ -677,6 +685,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f767ffca",
+   "metadata": {},
+   "source": [
+    "Quantité de produit acheté par les clients B2B"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "700b8599",
@@ -788,6 +804,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9e5b42be",
+   "metadata": {},
+   "source": [
+    "Quantité de produit acheté par les clients B2C"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "78edd693",
    "metadata": {},
    "source": [
@@ -819,7 +843,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lylia\\AppData\\Local\\Temp\\ipykernel_21212\\1260783253.py:16: FutureWarning: \n",
+      "C:\\Users\\lylia\\AppData\\Local\\Temp\\ipykernel_23376\\1260783253.py:16: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -868,6 +892,14 @@
     "plt.xlabel(\"Jour de la semaine\")\n",
     "plt.ylabel(\"Montant total des ventes\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2545b4d9",
+   "metadata": {},
+   "source": [
+    "Ventes par mois puis par jours"
    ]
   },
   {
@@ -1356,6 +1388,14 @@
     "\n",
     "Les ventes par période de l'année reste identiques"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0560432",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
